--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     alias(libs.plugins.android.application)
+    id("com.chaquo.python")
 }
 
 android {
@@ -21,7 +22,10 @@ android {
             }
         }
         ndk{
-            abiFilters "x86","x86_64","arm64-v8a"
+            abiFilters "x86_64","arm64-v8a"
+        }
+        python{
+            buildPython "/usr/bin/python"
         }
     }
 
@@ -57,17 +61,35 @@ android {
             jniLibs.srcDirs=['src/main/cpp/jniLibs']
         }
     }
+    buildToolsVersion '34.0.0'
+    ndkVersion '27.0.12077973'
 
 }
 
+chaquopy {
+    sourceSets{
+        getByName("main"){
+            srcDir("src/main/python")
+        }
+    }
+    defaultConfig{
+        version("3.12")
+        pip{
+            install("numpy")
+            install("pillow")
+        }
+    }
+}
 
 dependencies {
 
-    implementation libs.appcompat
-    implementation libs.material
+    implementation libs.material.v1120
     implementation libs.constraintlayout
     implementation project(':opencv')
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation libs.appcompat.v170
+    implementation libs.pytorch.android.lite
+    implementation libs.pytorch.android.torchvision
 }
