--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.4.1"
 androidxAppcompat = "1.7.0"
 appcompatV7Version = "28.0.0"
 appcompatVersion = "1.1.0"
+gson = "2.11.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
@@ -16,6 +17,7 @@ pytorch_android_lite = "1.9.0"
 appcompat-v110 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
 appcompat-v170 = { module = "androidx.appcompat:appcompat", version.ref = "androidxAppcompat" }
 com-android-support-support-vector-drawable5 = { module = "com.android.support:support-vector-drawable", version.ref = "appcompatV7Version" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
