--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,13 @@
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature
-        android:name="android.hardware.bluetooth_le"
-        android:required="true" />
-    <uses-feature
         android:name="android.hardware.usb.host"
         android:required="true" />
     <uses-feature
         android:name="android.hardware.usb.accessory"
         android:required="true" />
 
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
@@ -29,19 +26,19 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="unspecified"
+            android:screenOrientation="portrait"
+            android:configChanges="screenSize|screenLayout|keyboard|keyboardHidden"
             tools:ignore="DiscouragedApi,ExtraText">
             <intent-filter>
                 <!--                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />-->
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
-            android:name=".usbPermission"
-            android:parentActivityName=".MainActivity"
+            android:name=".usbPermissionActivity"
+            android:parentActivityName=".MainActivity_bak"
             android:exported="true" />
     </application>
 
